--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
 
       <!-- Plus de projets -->
       <div class="portfolio-item">
-        <img src="../img/terrain2D.png" alt="Terrain2D" class="portfolio-image" "style:transform:scale(-2);">
+        <img src="../img/terrain2D.png" alt="Terrain2D" class="portfolio-image" >
         <a href="https://github.com/patrickf2a/Plus-court-chemin.git" class="portfolio-title-link"><h3>Simulation plus court chemin 2D </h3></a>
         <p>Projet de création d'une simulation de labyrinthe en Python, intégrant des algorithmes pour trouver le chemin le plus court</p>
       </div>
