--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
       <div class="card">
         <img src="../img/Web.png" alt="Développement web">
         <h3>Développement web</h3>
-        <p>Doté d'une solide formation en développement web, je maîtrise les langages de programmation HTML, CSS et JavaScript. Familiarisé avec l'utilisation de frameworks modernes tels que Angular, Node.js, je possède une aptitude à développer des solutions web dynamiques et adaptatives, répondant aux exigences spécifiques de divers projets..</p>
+        <p>Je maîtrise les langages de programmation HTML, CSS et JavaScript. Familiarisé avec l'utilisation de frameworks modernes tels que Angular, Node.js, je possède une aptitude à développer des solutions web dynamiques et adaptatives, répondant aux exigences spécifiques de divers projets.</p>
       </div>
 
 
@@ -104,7 +104,7 @@
       <div class="card">
         <img src="../img/logiciel.png" alt="Développement logiciel">
         <h3>Développement logiciel</h3>
-        <p>Je possède une solide connaissance en programmation et je sais utiliser plusieurs langages de programmation comme Python, C, C++ pour créér des applications logicielle . J'ai également des bases en Java. </p>
+        <p>Je possède de solides connaissances en programmation et je sais utiliser plusieurs langages de programmation comme Python, C, C++ pour créér des applications logicielle . J'ai également des bases en Java. </p>
       </div>
 
 
@@ -112,14 +112,14 @@
       <div class="card">
         <img src="../img/database.png" alt="base de données">
         <h3>Base de données</h3>
-        <p>Je suis a l'aise dans la conception et la mise en place de bases de données, en utilisant des systèmes comme que MongoDB, Postgresql et Oracle. </p>
+        <p>Je suis à l'aise dans la conception et la mise en place de bases de données, en utilisant des systèmes tels que MongoDB, PostgreSQL et Oracle. </p>
       </div>
 
       <!-- Gestion de projet -->
       <div class="card">
         <img src="../img/gestion.png" alt="Gestion de projet">
         <h3>Gestion de projet</h3>
-        <p>Durant mon parcours j'ai acquis des connaissances en gestion de projet, de la planification à l'organisation des ressources. J'ai également appris à utiliser des outils de gestion de projet pour optimiser les processus et atteindre les objectifs fixés </p>
+        <p>Durant mon parcours j'ai acquis des connaissances en gestion de projet, de la planification à l'organisation des ressources. J'ai également appris à utiliser des outils de gestion de projet pour optimiser les processus et atteindre les objectifs fixés. </p>
       </div>
 
 
@@ -127,7 +127,7 @@
       <div class="card">
         <img src="../img/ingenierie.png" alt="Ingénierie logicielle">
         <h3>Ingénierie logicielle</h3>
-        <p>Durant mon parcours j'ai acquis des connaissances en analyse fonctionnels, en effet je suis capable d'analyser et modéliser des besoins métiers, ainsi que de rédiger des spécifications fonctionnelles où UserStories  . </p>
+        <p>Durant mon parcours j'ai acquis des connaissances en analyse fonctionnels, en effet je suis capable d'analyser et modéliser des besoins métiers, ainsi que de rédiger des spécifications fonctionnelles où UserStories. </p>
 
       </div>
 
@@ -135,8 +135,7 @@
       <div class="card">
         <img src="../img/outils.png" alt="Outils">
         <h3>Outils</h3>
-        <p>J'ai une maîtrise de divers outils de développement, dont Visual Studio Code, IntelliJ, Git et Oracle SQL Developer. De plus, je suis compétent dans l'utilisation de Rstudio pour la manipulation de données, ainsi que dans l'utilisation d'outils de rédaction tels que LaTeX.</p>
-
+        <p>J'ai une maîtrise de divers outils de développement, dont IntelliJ, Git et Oracle SQL Developer. De plus, je suis compétent dans l'utilisation de Rstudio pour la manipulation de données, ainsi que dans l'utilisation d'outils de rédaction tels que LaTeX.</p>
       </div>
     </div>
   </section>
@@ -148,21 +147,21 @@
         <span class="timeline-year"> Septembre 2023</span>
         <img src="../img/univcodeazur.jpeg" alt="Master Miage" class="timeline-image">
         <h3>Entrée en Master 1 </h3>
-        <p>Après avoir obtenu ma licence en informatique, j'ai décidé de poursuivre mes études en intégrant le Master MIAGE à l'Université Côte d'Azur. Ce master me permet de continuer à acquerir des compétence en informatique ainsi qu'en gestion et management. </p>
+        <p>Après avoir obtenu ma licence en informatique, j'ai décidé de poursuivre mes études en intégrant le Master MIAGE à l'Université Côte d'Azur. Ce master me permet de continuer à acquérir des compétences en informatique ainsi qu'en gestion et management. </p>
       </div>
 
       <div class="timeline-item" data-year="2023">
         <span class="timeline-year">Fevrier 2023 - Septembre 2023</span>
         <img src="../img/apa.jpg" alt="Job étudiant" class="timeline-image">
         <h3>Job Etudiant </h3>
-        <p>Après l'obtention de ma licence en informatique, j'ai opté pour une expérience professionnelle dans le bâtiment en tant que façadier dans l'entreprise APA ISOL, domaine dans lequel j'avais déjà travaillé lors des étés précédents. J'ai fait ce choix afin de pouvoir financer ma prochaine année d'étude.</p>
+        <p>Après l'obtention de ma licence en informatique, j'ai opté pour une expérience professionnelle dans le bâtiment en tant que façadier au sein de l'entreprise APA ISOL, domaine dans lequel j'avais déjà travaillé lors des étés précédents. J'ai fait ce choix afin de pouvoir financer ma prochaine année d'études.</p>
       </div>
 
       <div class="timeline-item" data-year="2018">
         <span class="timeline-year">2018 - Janvier 2023</span>
         <img src="../img/utln.jpeg" alt="Licence Informatique" class="timeline-image">
         <h3>Licence Informatique </h3>
-        <p>Après avoir obtenu mon baccalauréat, j'ai décidé d'intégrer une licence en informatique à Toulon, parcours Informatique. Cette formation couvre divers domaines tels que l'algorithmique, la programmation, les bases de données, la sécurité, les réseaux, et comprend également une solide base en mathématiques appliquées à l'informatique, y compris la logique, la théorie des graphes et la géométrie algorithmique. De plus, cette licence bénéficie de la labellisation CyberEdu délivrée par l'ANSSI.</p>
+        <p>Après avoir obtenu mon baccalauréat, j'ai décidé d'intégrer une licence en informatique à Toulon, parcours Informatique. Cette formation couvre divers domaines tels que l'algorithmique, la programmation, les bases de données, la sécurité, les réseaux, et comprend également une solide base en mathématiques appliquées à l'informatique, incluant la logique, la théorie des graphes et la géométrie algorithmique. De plus, cette licence bénéficie de la labellisation CyberEdu, délivrée par l'ANSSI.</p>
       </div>
 
 
@@ -170,7 +169,7 @@
         <span class="timeline-year">2018</span>
         <img src="../img/laetitia.jpeg" alt="Baccalauréat" class="timeline-image">
         <h3>Baccaleuréat ES</h3>
-        <p>Obtention du baccalauréat Économique et Social, spécialité Mathématiques, au lycée Laetitia Bonaparte (2A).</p>
+        <p>J'ai obtenu mon baccalauréat en Sciences Économiques et Sociales, avec une spécialité en Mathématiques, au lycée Laetitia Bonaparte (2A).</p>
       </div>
     </div>
   </section>
