--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" type="image/x-icon" href="../img/logo.ico">
+  <link rel="icon" type="image/x-icon" href="/img/logo.ico">
 
   <title>Patrick Fernandes De faria</title>
-  <link rel="stylesheet" href="../css/style.css">
-  <script src="../js/app.js" defer></script>
+  <link rel="stylesheet" href="/css/style.css">
+  <script src="/js/app.js" defer></script>
 
   <!-- Google Tag Manager -->
   <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
@@ -26,7 +26,7 @@
 
 <header class="header-scrolled">
   <div class="logo">
-    <img src="../img/logo.png" alt="Logo" />
+    <img src="/img/logo.png" alt="Logo" />
   </div>
 
   <!-- Bouton du menu pour mobile -->
@@ -50,10 +50,10 @@
 
   <div class="social-links ">
     <a href="https://www.linkedin.com/in/patrick-fernandes-6a02b1205/" target="_blank">
-      <img src="../img/linkedin.png" alt="LinkedIn" class="social-icon">
+      <img src="/img/linkedin.png" alt="LinkedIn" class="social-icon">
     </a>
     <a href="https://www.instagram.com/patrick_fernandes_/" target="_blank">
-      <img src="../img/Instagram.png" alt="Instagram" class="social-icon">
+      <img src="/img/Instagram.png" alt="Instagram" class="social-icon">
     </a>
     <!-- Add other social links as needed -->
   </div>
