--- a/index.html
+++ b/index.html
@@ -49,6 +49,11 @@
 
 
   <div class="social-links ">
+
+    <a href="Fernandes_Patrick.pdf" target="_blank" >
+      <img src="/img/CV.png" alt="CV" class="social-icon">
+    </a>
+
     <a href="https://www.linkedin.com/in/patrick-fernandes-6a02b1205/" target="_blank">
       <img src="/img/linkedin.png" alt="LinkedIn" class="social-icon">
     </a>
@@ -244,12 +249,8 @@
       <a href="https://github.com/patrickf2a" target="_blank">
         <img src="../img/git.png" alt="GitHub" class="social-icons">
       </a>
-
-
-
     </div>
   </section>
-
 
 
 
