--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
       <div class="card">
         <img src="../img/Web.png" alt="Développement web">
         <h3>Développement web</h3>
-        <p>Je maîtrise les langages de programmation HTML, CSS et JavaScript. Familiarisé avec l'utilisation de frameworks modernes tels que Angular, Node.js, je possède une aptitude à développer des solutions web dynamiques et adaptatives, répondant aux exigences spécifiques de divers projets.</p>
+        <p>Je maîtrise les langages de programmation HTML, CSS et JavaScript. Familiarisé avec l'utilisation de frameworks modernes tels que Angular, je possède une aptitude à développer des solutions web dynamiques et adaptatives, répondant aux exigences spécifiques de divers projets.</p>
       </div>
 
 
@@ -101,7 +101,7 @@
       <div class="card">
         <img src="../img/Cyber.png" alt="Cybersécurité">
         <h3>Cybersécurité</h3>
-        <p>Intéressé par la cybersécurité, je suis titulaire d'une licence labellisée CyberEdu, témoignant de mes compétences approfondies dans ce domaine. Familiarisé avec l'utilisation d'algorithmes de chiffrement tels que César, AES, Hill et Vigenère,je possède des connaissances de base en cryptographie.
+        <p>Intéressé par la cybersécurité, je suis titulaire d'une licence labellisée CyberEdu. Familiarisé avec l'utilisation d'algorithmes de chiffrement tels que César, AES, Hill et Vigenère,je possède des connaissances de base en cryptographie.
         </p>
       </div>
 
@@ -117,7 +117,7 @@
       <div class="card">
         <img src="../img/database.png" alt="base de données">
         <h3>Base de données</h3>
-        <p>Je suis à l'aise dans la conception et la mise en place de bases de données, en utilisant des systèmes tels que MongoDB, PostgreSQL et Oracle. </p>
+        <p>Je suis à l'aise dans la conception et la mise en place de bases de données, en utilisant des systèmes tels que MongoDB, PostgreSQL et PLSQL. </p>
       </div>
 
       <!-- Gestion de projet -->
