--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
   <div class="social-links ">
 
-    <a href="CVV Patrick.pdf" target="_blank" >
+    <a href="CVV_Patrick.pdf" target="_blank" >
       <img src="/img/CV.png" alt="CV" class="social-icon">
     </a>
 
