commit du refont, manque la version responsive

--- a/index.html
+++ b/index.html
@@ -70,12 +70,12 @@
     <div class="intro-text">
       <h1>Patrick</h1>
       <h2>FERNANDES DE FARIA</h2>
-      <p>Étudiant en master MIAGE à Nice </p>
+      <p>Étudiant en master MIAGE parcours MBDS à Nice </p>
 
       <!-- <a href="#" class="cv-button">CV</a>-->
     </div>
     <div class="image-container">
-      <img src="../img/photo.png" alt="Patrick FERNANDES DE FARIA" class="intro-img"/>
+      <img src="../img/Patrick Identity Remove Background.png" alt="Patrick FERNANDES DE FARIA" class="intro-img"/>
     </div>
   </section>
 
@@ -83,9 +83,7 @@
     <h2 class="section-title">Mes compétences </h2>
     <div class="competence-content">
       <p class="competence-text">
-    Mon parcours d'études m'a permis d'aquerir de nombreuses compétences, allant du développement à la gestion de projet. Voici un petit tour d'horizon de ce que j'ai aqcuis
-
-        </p>
+        À travers mon parcours universitaire, j'ai développé diverses compétences techniques et méthodologiques. Voici un aperçu des domaines dans lesquels je me suis formé.</p>
     </div>
 
     <div class="container">
@@ -93,7 +91,7 @@
       <div class="card">
         <img src="../img/Web.png" alt="Développement web">
         <h3>Développement web</h3>
-        <p>Je maîtrise les langages de programmation HTML, CSS et JavaScript. Familiarisé avec l'utilisation de frameworks modernes tels que Angular, je possède une aptitude à développer des solutions web dynamiques et adaptatives, répondant aux exigences spécifiques de divers projets.</p>
+        <p>Je maîtrise les fondamentaux du développement web avec HTML, CSS et JavaScript. Je suis notamment à l'aise avec le framework Angular pour développer des applications web modernes et responsives.</p>
       </div>
 
 
@@ -101,7 +99,7 @@
       <div class="card">
         <img src="../img/Cyber.png" alt="Cybersécurité">
         <h3>Cybersécurité</h3>
-        <p>Intéressé par la cybersécurité, je suis titulaire d'une licence labellisée CyberEdu. Familiarisé avec l'utilisation d'algorithmes de chiffrement tels que César, AES, Hill et Vigenère,je possède des connaissances de base en cryptographie.
+        <p>Dans le cadre de ma licence labellisée CyberEdu, j'ai acquis des connaissances en sécurité informatique, notamment en cryptographie avec la pratique d'algorithmes de chiffrement comme AES, Hill et Vigenère.</p>
         </p>
       </div>
 
@@ -109,22 +107,21 @@
       <div class="card">
         <img src="../img/logiciel.png" alt="Développement logiciel">
         <h3>Développement logiciel</h3>
-        <p>Je possède de solides connaissances en programmation et je sais utiliser plusieurs langages de programmation comme Python, C, C++ pour créér des applications logicielle . J'ai également des bases en Java. </p>
+        <p>Je pratique plusieurs langages de programmation comme Python, C et C++ pour le développement d'applications. J'ai également des bases solides en Java et en programmation orientée objet.</p>
       </div>
-
 
       <!-- bdd -->
       <div class="card">
         <img src="../img/database.png" alt="base de données">
         <h3>Base de données</h3>
-        <p>Je suis à l'aise dans la conception et la mise en place de bases de données, en utilisant des systèmes tels que MongoDB, PostgreSQL et PLSQL. </p>
+        <p>Je suis familier avec la conception et l'utilisation de bases de données, notamment MongoDB pour le NoSQL, ainsi que PostgreSQL et PL/SQL pour les bases relationnelles.</p>
       </div>
 
       <!-- Gestion de projet -->
       <div class="card">
         <img src="../img/gestion.png" alt="Gestion de projet">
         <h3>Gestion de projet</h3>
-        <p>Durant mon parcours j'ai acquis des connaissances en gestion de projet, de la planification à l'organisation des ressources. J'ai également appris à utiliser des outils de gestion de projet pour optimiser les processus et atteindre les objectifs fixés. </p>
+        <p>J'ai acquis des bases solides en gestion de projet, de la planification à l'organisation des ressources. Je sais utiliser les principaux outils de gestion de projet pour suivre efficacement les objectifs.</p>
       </div>
 
 
@@ -132,15 +129,21 @@
       <div class="card">
         <img src="../img/ingenierie.png" alt="Ingénierie logicielle">
         <h3>Ingénierie logicielle</h3>
-        <p>Durant mon parcours j'ai acquis des connaissances en analyse fonctionnels, en effet je suis capable d'analyser et modéliser des besoins métiers, ainsi que de rédiger des spécifications fonctionnelles où UserStories. </p>
+        <p>Je sais analyser et modéliser des besoins métiers, ainsi que rédiger des spécifications fonctionnelles et des User Stories dans le cadre de projets agiles.</p>
+      </div>
 
+      <!-- Big Data & Analyse de données -->
+      <div class="card">
+        <img src="../img/Big Data Icon.png" alt="Big Data et Analyse de données">
+        <h3>Big Data & Analyse de données</h3>
+        <p>Je suis formé à l'analyse et au traitement des données grâce à l'utilisation du langage R. Je sais créer des visualisations de données pertinentes et développer des tableaux de bord interactifs avec R Shiny. J'ai également une expérience dans l'application des méthodes statistiques pour l'interprétation des données.</p>
       </div>
 
       <!-- Outils -->
       <div class="card">
         <img src="../img/outils.png" alt="Outils">
-        <h3>Outils</h3>
-        <p>J'ai une maîtrise de divers outils de développement, dont IntelliJ, Git et Oracle SQL Developer. De plus, je suis compétent dans l'utilisation de Rstudio pour la manipulation de données, ainsi que dans l'utilisation d'outils de rédaction tels que LaTeX.</p>
+        <h3>Outils de développement</h3>
+        <p>Je travaille quotidiennement avec différents outils de développement, notamment la suite JetBrains (IntelliJ IDEA, PyCharm, WebStorm), Git pour la gestion de versions. Je suis également familier avec LaTeX pour la rédaction de documents techniques.</p>
       </div>
     </div>
   </section>
@@ -148,25 +151,32 @@
   <section id="journey" class="journey-section fade-in">
     <h2 class="section-title">Mon Parcours</h2>
     <div class="timeline">
+      <div class="timeline-item" data-year="2024">
+        <span class="timeline-year"> Septembre 2024</span>
+        <img src="../img/logo-bleu-grand.png" alt="Master Miage" class="timeline-image">
+        <h3>Entrée en Master 2 Miage MBDS et Apprenti chez PROBTP  </h3>
+        <p>En cette dernière année de master MIAGE, j'ai choisi de me spécialiser en MBDS (Mobiquité, Big Data et intégration de Systèmes), une formation axée sur le développement logiciel et les enjeux du Big Data. Parallèlement à mes études, j'ai saisi l'opportunité de rejoindre le groupe PRO BTP en tant que développeur DevOps dans le cadre d'une alternance, me permettant ainsi d'acquérir une expérience pratique significative dans un environnement professionnel dynamique.</p>      </div>
+
+
       <div class="timeline-item" data-year="2023">
         <span class="timeline-year"> Septembre 2023</span>
         <img src="../img/univcodeazur.jpeg" alt="Master Miage" class="timeline-image">
         <h3>Entrée en Master 1 </h3>
-        <p>Après avoir obtenu ma licence en informatique, j'ai décidé de poursuivre mes études en intégrant le Master MIAGE à l'Université Côte d'Azur. Ce master me permet de continuer à acquérir des compétences en informatique ainsi qu'en gestion et management. </p>
+        <p>Suite à l'obtention de ma licence en informatique, j'ai intégré le Master MIAGE à l'Université Côte d'Azur. Cette formation me permet d'approfondir mes compétences techniques tout en développant mes connaissances en gestion de projets informatiques et en management.</p>
       </div>
 
       <div class="timeline-item" data-year="2023">
         <span class="timeline-year">Fevrier 2023 - Septembre 2023</span>
         <img src="../img/apa.jpg" alt="Job étudiant" class="timeline-image">
         <h3>Job Etudiant </h3>
-        <p>Après l'obtention de ma licence en informatique, j'ai opté pour une expérience professionnelle dans le bâtiment en tant que façadier au sein de l'entreprise APA ISOL, domaine dans lequel j'avais déjà travaillé lors des étés précédents. J'ai fait ce choix afin de pouvoir financer ma prochaine année d'études.</p>
+        <p>Entre ma licence et mon master, j'ai travaillé comme façadier chez APA ISOL, une entreprise du bâtiment où j'avais déjà effectué plusieurs missions durant mes étés étudiants. Cette expérience m'a permis de financer la poursuite de mes études tout en développant mon sens des responsabilités et du travail en équipe.</p>
       </div>
 
       <div class="timeline-item" data-year="2018">
         <span class="timeline-year">2018 - Janvier 2023</span>
         <img src="../img/utln.jpeg" alt="Licence Informatique" class="timeline-image">
         <h3>Licence Informatique </h3>
-        <p>Après avoir obtenu mon baccalauréat, j'ai décidé d'intégrer une licence en informatique à Toulon, parcours Informatique. Cette formation couvre divers domaines tels que l'algorithmique, la programmation, les bases de données, la sécurité, les réseaux, et comprend également une solide base en mathématiques appliquées à l'informatique, incluant la logique, la théorie des graphes et la géométrie algorithmique. De plus, cette licence bénéficie de la labellisation CyberEdu, délivrée par l'ANSSI.</p>
+        <p>Ma formation en licence d'informatique m'a permis d'acquérir de solides bases techniques dans des domaines variés : algorithmique, programmation, bases de données, sécurité et réseaux. Le cursus, labellisé CyberEdu par l'ANSSI, inclut également une formation en mathématiques appliquées, couvrant la logique, la théorie des graphes et la géométrie algorithmique.</p>
       </div>
 
 
@@ -174,7 +184,7 @@
         <span class="timeline-year">2018</span>
         <img src="../img/laetitia.jpeg" alt="Baccalauréat" class="timeline-image">
         <h3>Baccaleuréat ES</h3>
-        <p>J'ai obtenu mon baccalauréat en Sciences Économiques et Sociales, avec une spécialité en Mathématiques, au lycée Laetitia Bonaparte (2A).</p>
+        <p>Obtention du baccalauréat ES avec spécialité Mathématiques au lycée Laetitia Bonaparte d'Ajaccio. Cette formation m'a donné de bonnes bases en analyse et en raisonnement logique.</p>
       </div>
     </div>
   </section>
