commit de refont au point

--- a/index.html
+++ b/index.html
@@ -153,10 +153,10 @@
     <div class="timeline">
       <div class="timeline-item" data-year="2024">
         <span class="timeline-year"> Septembre 2024</span>
-        <img src="../img/logo-bleu-grand.png" alt="Master Miage" class="timeline-image">
+        <img src="../img/logo-bleu-grand.png" alt="Master MBDS" class="timeline-image">
         <h3>Entrée en Master 2 Miage MBDS et Apprenti chez PROBTP  </h3>
-        <p>En cette dernière année de master MIAGE, j'ai choisi de me spécialiser en MBDS (Mobiquité, Big Data et intégration de Systèmes), une formation axée sur le développement logiciel et les enjeux du Big Data. Parallèlement à mes études, j'ai saisi l'opportunité de rejoindre le groupe PRO BTP en tant que développeur DevOps dans le cadre d'une alternance, me permettant ainsi d'acquérir une expérience pratique significative dans un environnement professionnel dynamique.</p>      </div>
-
+        <p>En cette dernière année de master MIAGE, j'ai choisi de me spécialiser en MBDS (Mobiquité, Big Data et intégration de Systèmes), une formation axée sur le développement logiciel et les enjeux du Big Data. Parallèlement à mes études, j'ai saisi l'opportunité de rejoindre le groupe PRO BTP en tant que développeur DevOps dans le cadre d'une alternance, me permettant ainsi d'acquérir une expérience pratique significative dans un environnement professionnel dynamique.</p>
+      </div>
 
       <div class="timeline-item" data-year="2023">
         <span class="timeline-year"> Septembre 2023</span>
@@ -178,7 +178,6 @@
         <h3>Licence Informatique </h3>
         <p>Ma formation en licence d'informatique m'a permis d'acquérir de solides bases techniques dans des domaines variés : algorithmique, programmation, bases de données, sécurité et réseaux. Le cursus, labellisé CyberEdu par l'ANSSI, inclut également une formation en mathématiques appliquées, couvrant la logique, la théorie des graphes et la géométrie algorithmique.</p>
       </div>
-
 
       <div class="timeline-item" data-year="2018">
         <span class="timeline-year">2018</span>
