--- a/index.html
+++ b/index.html
@@ -46,36 +46,28 @@
     </ul>
   </nav>
 
-
-
-  <div class="social-links ">
-
-    <a href="CVV_Patrick.pdf" target="_blank" >
+  <div class="social-links">
+    <a href="CVV_Patrick.pdf" target="_blank">
       <img src="/img/CV.png" alt="CV" class="social-icon">
     </a>
-
     <a href="https://www.linkedin.com/in/patrick-fernandes-6a02b1205/" target="_blank">
       <img src="/img/linkedin.png" alt="LinkedIn" class="social-icon">
     </a>
     <a href="https://www.instagram.com/patrick_fernandes_/" target="_blank">
       <img src="/img/Instagram.png" alt="Instagram" class="social-icon">
     </a>
-    <!-- Add other social links as needed -->
   </div>
-
 </header>
-<main>
 
+<main>
   <section class="intro fade-in" id="presentation">
     <div class="intro-text">
       <h1>Patrick</h1>
       <h2>FERNANDES DE FARIA</h2>
       <p>Étudiant en master MIAGE parcours MBDS à Nice </p>
-
-      <!-- <a href="#" class="cv-button">CV</a>-->
     </div>
     <div class="image-container">
-      <img src="../img/Patrick Identity Remove Background.png" alt="Patrick FERNANDES DE FARIA" class="intro-img"/>
+      <img src="/img/Patrick Identity Remove Background.png" alt="Patrick FERNANDES DE FARIA" class="intro-img"/>
     </div>
   </section>
 
@@ -87,61 +79,50 @@
     </div>
 
     <div class="container">
-      <!-- Développement web -->
       <div class="card">
-        <img src="../img/Web.png" alt="Développement web">
+        <img src="/img/Web.png" alt="Développement web">
         <h3>Développement web</h3>
         <p>Je maîtrise les fondamentaux du développement web avec HTML, CSS et JavaScript. Je suis notamment à l'aise avec le framework Angular pour développer des applications web modernes et responsives.</p>
       </div>
 
-
-      <!-- Cybersécurité -->
       <div class="card">
-        <img src="../img/Cyber.png" alt="Cybersécurité">
+        <img src="/img/Cyber.png" alt="Cybersécurité">
         <h3>Cybersécurité</h3>
         <p>Dans le cadre de ma licence labellisée CyberEdu, j'ai acquis des connaissances en sécurité informatique, notamment en cryptographie avec la pratique d'algorithmes de chiffrement comme AES, Hill et Vigenère.</p>
-        </p>
       </div>
 
-      <!-- Devellopement logiciel -->
       <div class="card">
-        <img src="../img/logiciel.png" alt="Développement logiciel">
+        <img src="/img/logiciel.png" alt="Développement logiciel">
         <h3>Développement logiciel</h3>
         <p>Je pratique plusieurs langages de programmation comme Python, C et C++ pour le développement d'applications. J'ai également des bases solides en Java et en programmation orientée objet.</p>
       </div>
 
-      <!-- bdd -->
       <div class="card">
-        <img src="../img/database.png" alt="base de données">
+        <img src="/img/database.png" alt="base de données">
         <h3>Base de données</h3>
         <p>Je suis familier avec la conception et l'utilisation de bases de données, notamment MongoDB pour le NoSQL, ainsi que PostgreSQL et PL/SQL pour les bases relationnelles.</p>
       </div>
 
-      <!-- Gestion de projet -->
       <div class="card">
-        <img src="../img/gestion.png" alt="Gestion de projet">
+        <img src="/img/gestion.png" alt="Gestion de projet">
         <h3>Gestion de projet</h3>
         <p>J'ai acquis des bases solides en gestion de projet, de la planification à l'organisation des ressources. Je sais utiliser les principaux outils de gestion de projet pour suivre efficacement les objectifs.</p>
       </div>
 
-
-      <!-- Ingénierie logicielle -->
       <div class="card">
-        <img src="../img/ingenierie.png" alt="Ingénierie logicielle">
+        <img src="/img/ingenierie.png" alt="Ingénierie logicielle">
         <h3>Ingénierie logicielle</h3>
         <p>Je sais analyser et modéliser des besoins métiers, ainsi que rédiger des spécifications fonctionnelles et des User Stories dans le cadre de projets agiles.</p>
       </div>
 
-      <!-- Big Data & Analyse de données -->
       <div class="card">
-        <img src="../img/Big Data Icon.png" alt="Big Data et Analyse de données">
+        <img src="/img/Big Data Icon.png" alt="Big Data et Analyse de données">
         <h3>Big Data & Analyse de données</h3>
         <p>Je suis formé à l'analyse et au traitement des données grâce à l'utilisation du langage R. Je sais créer des visualisations de données pertinentes et développer des tableaux de bord interactifs avec R Shiny. J'ai également une expérience dans l'application des méthodes statistiques pour l'interprétation des données.</p>
       </div>
 
-      <!-- Outils -->
       <div class="card">
-        <img src="../img/outils.png" alt="Outils">
+        <img src="/img/outils.png" alt="Outils">
         <h3>Outils de développement</h3>
         <p>Je travaille quotidiennement avec différents outils de développement, notamment la suite JetBrains (IntelliJ IDEA, PyCharm, WebStorm), Git pour la gestion de versions. Je suis également familier avec LaTeX pour la rédaction de documents techniques.</p>
       </div>
@@ -152,45 +133,44 @@
     <h2 class="section-title">Mon Parcours</h2>
     <div class="timeline">
       <div class="timeline-item" data-year="2024">
-        <span class="timeline-year"> Septembre 2024</span>
-        <img src="../img/logo-bleu-grand.png" alt="Master MBDS" class="timeline-image">
-        <h3>Entrée en Master 2 Miage MBDS et Apprenti chez PROBTP  </h3>
+        <span class="timeline-year">Septembre 2024</span>
+        <img src="/img/logo-bleu-grand.png" alt="Master MBDS" class="timeline-image">
+        <h3>Entrée en Master 2 Miage MBDS et Apprenti chez PROBTP</h3>
         <p>En cette dernière année de master MIAGE, j'ai choisi de me spécialiser en MBDS (Mobiquité, Big Data et intégration de Systèmes), une formation axée sur le développement logiciel et les enjeux du Big Data. Parallèlement à mes études, j'ai saisi l'opportunité de rejoindre le groupe PRO BTP en tant que développeur DevOps dans le cadre d'une alternance, me permettant ainsi d'acquérir une expérience pratique significative dans un environnement professionnel dynamique.</p>
       </div>
 
       <div class="timeline-item" data-year="2023">
-        <span class="timeline-year"> Septembre 2023</span>
-        <img src="../img/univcodeazur.jpeg" alt="Master Miage" class="timeline-image">
-        <h3>Entrée en Master 1 </h3>
+        <span class="timeline-year">Septembre 2023</span>
+        <img src="/img/univcodeazur.jpeg" alt="Master Miage" class="timeline-image">
+        <h3>Entrée en Master 1</h3>
         <p>Suite à l'obtention de ma licence en informatique, j'ai intégré le Master MIAGE à l'Université Côte d'Azur. Cette formation me permet d'approfondir mes compétences techniques tout en développant mes connaissances en gestion de projets informatiques et en management.</p>
       </div>
 
       <div class="timeline-item" data-year="2023">
         <span class="timeline-year">Fevrier 2023 - Septembre 2023</span>
-        <img src="../img/apa.jpg" alt="Job étudiant" class="timeline-image">
-        <h3>Job Etudiant </h3>
+        <img src="/img/apa.jpg" alt="Job étudiant" class="timeline-image">
+        <h3>Job Etudiant</h3>
         <p>Entre ma licence et mon master, j'ai travaillé comme façadier chez APA ISOL, une entreprise du bâtiment où j'avais déjà effectué plusieurs missions durant mes étés étudiants. Cette expérience m'a permis de financer la poursuite de mes études tout en développant mon sens des responsabilités et du travail en équipe.</p>
       </div>
 
       <div class="timeline-item" data-year="2018">
         <span class="timeline-year">2018 - Janvier 2023</span>
-        <img src="../img/utln.jpeg" alt="Licence Informatique" class="timeline-image">
-        <h3>Licence Informatique </h3>
+        <img src="/img/utln.jpeg" alt="Licence Informatique" class="timeline-image">
+        <h3>Licence Informatique</h3>
         <p>Ma formation en licence d'informatique m'a permis d'acquérir de solides bases techniques dans des domaines variés : algorithmique, programmation, bases de données, sécurité et réseaux. Le cursus, labellisé CyberEdu par l'ANSSI, inclut également une formation en mathématiques appliquées, couvrant la logique, la théorie des graphes et la géométrie algorithmique.</p>
       </div>
 
       <div class="timeline-item" data-year="2018">
         <span class="timeline-year">2018</span>
-        <img src="../img/laetitia.jpeg" alt="Baccalauréat" class="timeline-image">
-        <h3>Baccaleuréat ES</h3>
+        <img src="/img/laetitia.jpeg" alt="Baccalauréat" class="timeline-image">
+        <h3>Baccalauréat ES</h3>
         <p>Obtention du baccalauréat ES avec spécialité Mathématiques au lycée Laetitia Bonaparte d'Ajaccio. Cette formation m'a donné de bonnes bases en analyse et en raisonnement logique.</p>
       </div>
     </div>
   </section>
 
-
   <section id="projects" class="portfolio-section fade-in">
-   <h2 class="section-title">Mon Portfolio</h2>
+    <h2 class="section-title">Mon Portfolio</h2>
     <div class="competence-content">
       <p class="competence-text">
         Voici une sélection de projets sur lesquels j'ai travaillé
@@ -198,71 +178,66 @@
     </div>
     <div class="portfolio-container">
       <div class="portfolio-item">
-        <img src="../img/compil.png" alt="Projet 1" class="portfolio-image">
+        <img src="/img/compil.png" alt="Projet 1" class="portfolio-image">
         <a href="https://github.com/patrickf2a/Compilateur-RAM-.git" class="portfolio-title-link"><h3>Compilateur RAM</h3></a>
-        <p>Projet de compilateur en langage C qui traduit un algorithme en langage algorithmique vers le langage de la machine RAM </p>
+        <p>Projet de compilateur en langage C qui traduit un algorithme en langage algorithmique vers le langage de la machine RAM</p>
       </div>
 
-      <!-- Projet 2 -->
       <div class="portfolio-item">
-        <img src="../img/cubeiso.png" alt="Cube iso" class="portfolio-image">
+        <img src="/img/cubeiso.png" alt="Cube iso" class="portfolio-image">
         <a href="https://github.com/patrickf2a/Cube-3D-Isom-trique.git" class="portfolio-title-link"><h3>Cube Isometrique</h3></a>
         <p>Projet de gestion de cube 3D isometrique en Python</p>
       </div>
 
-
-
-      <!-- Projet 3 -->
       <div class="portfolio-item">
-        <img src="../img/ants.png" alt="Ants Simulation" class="portfolio-image zoomed-image">
+        <img src="/img/ants.png" alt="Ants Simulation" class="portfolio-image zoomed-image">
         <a href="https://github.com/patrickf2a/ANTS-Simulation.git" class="portfolio-title-link"><h3>ANTS Simulation</h3></a>
         <p>Projet de simulation du comportement d'une fourmilière en Python</p>
       </div>
 
-      <!-- Plus de projets -->
       <div class="portfolio-item">
-        <img src="../img/terrain2D.png" alt="Terrain2D" class="portfolio-image" >
-        <a href="https://github.com/patrickf2a/Plus-court-chemin.git" class="portfolio-title-link"><h3>Simulation plus court chemin 2D </h3></a>
+        <img src="/img/terrain2D.png" alt="Terrain2D" class="portfolio-image">
+        <a href="https://github.com/patrickf2a/Plus-court-chemin.git" class="portfolio-title-link"><h3>Simulation plus court chemin 2D</h3></a>
         <p>Projet de création d'une simulation de labyrinthe en Python, intégrant des algorithmes pour trouver le chemin le plus court</p>
       </div>
 
-        <!-- Projet 4 -->
       <div class="portfolio-item">
-          <img src="../img/assignment.png" alt="Projet 4" class="portfolio-image">
+        <img src="/img/assignment.png" alt="Projet 4" class="portfolio-image">
         <a href="https://github.com/patrickf2a/assignment-app.git" class="portfolio-title-link"><h3>Application de gestion des devoirs</h3></a>
-          <p>Projet de création d'une application web pour la gestion de devoirs en Angular</p>
+        <p>Projet de création d'une application web pour la gestion de devoirs en Angular</p>
       </div>
 
-        <!-- Projet 5 -->
-        <div class="portfolio-item">
-            <img src="../img/holo.png" alt="Projet 5" class="portfolio-image">
-          <h3>Application Realité augmentée </h3>
-            <p>Projet de développement d'une application en réalité augmentée conçue avec Unity pour simplifier l'apprentissage du synthétiseur grâce à l'HoloLens</p>
-        </div>
+      <div class="portfolio-item">
+        <img src="/img/holo.png" alt="Projet 5" class="portfolio-image">
+        <h3>Application Realité augmentée</h3>
+        <p>Projet de développement d'une application en réalité augmentée conçue avec Unity pour simplifier l'apprentissage du synthétiseur grâce à l'HoloLens</p>
+      </div>
+
+      <div class="portfolio-item">
+        <img src="/img/nettoiecaresse.png" alt="Projet 6" class="portfolio-image">
+        <a href="https://nettoiecaresse.fr" class="portfolio-title-link"><h3>Siteweb E-commerce</h3></a>
+        <p>Développement du siteweb Nettoie&Caresse dans son intégralité dont le but est la réservation de prestations de nettoyages sur Ajaccio et ses alentours</p>
+      </div>
     </div>
   </section>
-
 
   <section id="contact" class="contact-section">
     <h2 class="section-title">Contactez-moi</h2>
     <p class="section-intro">Je vous invite à me contacter pour toute question, information ou collaboration</p>
     <div class="contact-info">
-      <a href="mailto:patrickfernandes326@gmail.com" >
-        <img src="../img/mail.png" alt="Email" class="social-icons">
+      <a href="mailto:patrickfernandes326@gmail.com">
+        <img src="/img/mail.png" alt="Email" class="social-icons">
       </a>
 
       <a href="https://www.linkedin.com/in/patrick-fernandes-6a02b1205/" target="_blank">
-        <img src="../img/linkedin.png" alt="LinkedIn" class="social-icons">
+        <img src="/img/linkedin.png" alt="LinkedIn" class="social-icons">
       </a>
 
       <a href="https://github.com/patrickf2a" target="_blank">
-        <img src="../img/git.png" alt="GitHub" class="social-icons">
+        <img src="/img/git.png" alt="GitHub" class="social-icons">
       </a>
     </div>
   </section>
-
-
-
 </main>
 </body>
 </html>
